button mobile fix

--- a/web/themes/custom/myusf/sass/src/partials/_mixins.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_mixins.scss
@@ -32,6 +32,7 @@
 
     @include media-breakpoint-down(phone) {
         width:100%;
+        margin-bottom: .625rem;
     }
 
      @include media-breakpoint-only (tablet) {
